--- a/homework1android/app/src/main/res/layout/list_item.xml
+++ b/homework1android/app/src/main/res/layout/list_item.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+    android:background="@color/grey"
+android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:padding="16dp">
+xmlns:tools="http://schemas.android.com/tools"
+tools:layout_height="500dp">
 
-    <TextView
-        android:id="@+id/itemTextView"
-        android:text="1"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26sp" />
-</androidx.cardview.widget.CardView>
+<TextView
+    android:id="@+id/itemTextView"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:gravity="center"
+    app:layout_constraintDimensionRatio="H,1:1"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="Test">
+
+</TextView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
