--- a/homework1android/app/src/main/res/layout/activity_main.xml
+++ b/homework1android/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.recyclerview.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainRecycleView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mainRecycleView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/list_item"
-        />
+    android:layout_height="wrap_content"
+    tools:listitem="@layout/list_item"
+    tools:context=".MainActivity"
+    />
 
 
-</FrameLayout>
