--- a/homework1android/app/src/main/res/layout/button_item.xml
+++ b/homework1android/app/src/main/res/layout/button_item.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text= "@string/add_button_text"
+        android:layout_marginHorizontal="8dp"
         />
 
 </FrameLayout>
