--- a/homework1android/app/src/main/res/layout/list_item.xml
+++ b/homework1android/app/src/main/res/layout/list_item.xml
@@ -12,6 +12,7 @@ tools:layout_height="500dp">
     android:id="@+id/itemTextView"
     android:layout_width="0dp"
     android:layout_height="0dp"
+    android:textColor="@color/white"
     android:gravity="center"
     app:layout_constraintDimensionRatio="H,1:1"
     app:layout_constraintBottom_toBottomOf="parent"
