--- a/homework2android/app/src/main/res/layout/fragment_main.xml
+++ b/homework2android/app/src/main/res/layout/fragment_main.xml
@@ -6,9 +6,17 @@
     tools:context=".ui.main.MainFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/gifRecycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
         />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
 
 </FrameLayout>
