--- a/homework2android/app/src/main/res/layout/gif_item.xml
+++ b/homework2android/app/src/main/res/layout/gif_item.xml
@@ -3,5 +3,6 @@
     android:id="@+id/imageView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="4dp"
     android:scaleType="centerCrop"
     />
