--- a/homework2android/app/src/main/res/layout/repeat_button_item.xml
+++ b/homework2android/app/src/main/res/layout/repeat_button_item.xml
@@ -21,6 +21,7 @@
         android:layout_marginTop="2dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
+        android:paddingHorizontal="4dp"
         android:text="@string/error_hint_text"/>
 
     <Button
