--- a/homework3android/app/src/main/res/layout/item_art_post.xml
+++ b/homework3android/app/src/main/res/layout/item_art_post.xml
@@ -1,6 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:backgroundTint="@color/post_background"
+    card_view:cardCornerRadius="16dp"
+    card_view:cardElevation="4dp"
+    card_view:cardUseCompatPadding="true">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="8dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/acc_placeholder"
+            android:background="@drawable/circle_shape"
+            android:clipToOutline="true"
+            />
+
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/profile_image"
+            android:layout_alignTop="@id/profile_image"
+            android:layout_alignBottom="@id/profile_image"
+            android:text="DenikUmeetRisovat"
+            android:gravity="center"
+            android:maxLength="30"
+            android:textColor="@color/main_text_color"
+            android:textStyle="bold"/>
+
+        <ImageView
+            android:id="@+id/artwork_image"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_below="@id/profile_image"
+            android:layout_marginTop="8dp"
+            android:scaleType="fitXY"/>
+
+        <TextView
+            android:id="@+id/artwork_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/artwork_image"
+            android:text="Pixel Steve"
+            android:layout_marginHorizontal="16dp"
+            android:textColor="@color/main_text_color"
+            android:textStyle="bold"
+            android:textSize="18sp"/>
+
+        <TextView
+            android:id="@+id/artwork_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/artwork_title"
+            android:layout_marginHorizontal="16dp"
+            android:textColor="@color/main_text_color"
+            android:text="Пиксельная графика — форма цифрового изображения, созданного на компьютере с помощью растрового графического редактора..."
+            android:maxLines="2"
+            android:ellipsize="end"/>
+
+        <LinearLayout
+            android:id="@+id/rate_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/artwork_description"
+            android:layout_alignTop="@id/more_button"
+            android:layout_marginHorizontal="16dp"
+            android:layout_alignBottom="@id/more_button"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <ImageButton
+                android:id="@+id/like_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/heart"
+                android:background="?android:selectableItemBackgroundBorderless"
+                android:contentDescription="@string/like"/>
+
+            <TextView
+                android:id="@+id/like_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/main_text_color"
+                android:text="128"
+                android:layout_marginStart="4dp"/>
+
+            <ImageButton
+                android:id="@+id/comment_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/chat"
+                android:background="?android:selectableItemBackgroundBorderless"
+                android:contentDescription="@string/comment"
+                android:layout_marginStart="16dp"/>
+
+            <TextView
+                android:id="@+id/comment_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/main_text_color"
+                android:text="18"
+                android:layout_marginStart="4dp"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/more_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/button_dark_light_color"
+            android:layout_alignParentEnd="true"
+            android:layout_marginHorizontal="16dp"
+            android:layout_below="@id/artwork_description"
+            android:text="@string/look_button"
+            android:textSize="12sp"
+            android:layout_marginVertical="8dp"
+            />
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
