--- a/homework3android/app/src/main/res/layout/item_account.xml
+++ b/homework3android/app/src/main/res/layout/item_account.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:padding="8dp">
@@ -21,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="User Name"
+        tools:text="User Name"
         android:textColor="@color/main_text_color"
         android:textSize="14sp" />
 </LinearLayout>
