--- a/homework3android/app/src/main/res/layout/item_filter.xml
+++ b/homework3android/app/src/main/res/layout/item_filter.xml
@@ -3,18 +3,21 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     card_view:cardCornerRadius="25dp"
+    android:layout_marginHorizontal="8dp"
     android:backgroundTint="@color/normal_filter_color">
 
     <TextView
-        android:id="@+id/tv_item_text"
+        android:id="@+id/tv_filter_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:padding="16dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="8dp"
         android:textStyle="bold"
-        android:text="Только блог"
+        tools:text="Только блог"
         android:textColor="@color/black" />
 
 </androidx.cardview.widget.CardView>
