--- a/homework3android/app/src/main/res/navigation/main_navigation.xml
+++ b/homework3android/app/src/main/res/navigation/main_navigation.xml
@@ -20,4 +20,9 @@
         android:name="com.example.homework3android.ui.post.PostFragment"
         android:label="fragment_post"
         tools:layout="@layout/fragment_post" />
+    <fragment
+        android:id="@+id/addFragment2"
+        android:name="com.example.homework3android.ui.add.AddFragment"
+        android:label="fragment_add"
+        tools:layout="@layout/fragment_add" />
 </navigation>
