--- a/homework3android/app/src/main/res/layout/fragment_post.xml
+++ b/homework3android/app/src/main/res/layout/fragment_post.xml
@@ -1,11 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.post.PostFragment">
+    android:background="@color/secondary_background"
+    tools:context=".ui.post.PostFragment"
+    >
+
+    <ImageView
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/back_button"
+        />
+
+    <ImageView
+        android:id="@+id/profile_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignBottom="@id/backButton"
+        android:layout_alignTop="@id/backButton"
+        android:layout_alignR="@id/backButton"
+        android:layout_marginTop="8dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/acc_placeholder"
+        android:background="@drawable/circle_shape"
+        />
+
+    <TextView
+        android:id="@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_toEndOf="@id/profile_image"
+        android:layout_alignTop="@id/profile_image"
+        android:layout_alignBottom="@id/profile_image"
+        tools:text="DenikUmeetRisovat"
+        android:gravity="center"
+        android:maxLength="30"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold"/>
+
+    <ImageView
+        android:id="@+id/subscribeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/profile_image"
+        android:layout_alignTop="@id/profile_image"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/person_add"
+        />
+
+    <ImageView
+        android:id="@+id/artwork_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="400dp"
+        android:layout_below="@id/profile_image"
+        android:layout_marginTop="8dp"
+        android:scaleType="fitXY"
+        />
+
+    <TextView
+        android:id="@+id/artwork_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/artwork_image"
+        tools:text="Pixel Steve"
+        android:layout_marginHorizontal="16dp"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
+
+    <TextView
+        android:id="@+id/artwork_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/artwork_title"
+        android:layout_marginHorizontal="16dp"
+        android:textColor="@color/main_text_color"
+        tools:text="Пиксельная графика — форма цифрового изображения, созданного на компьютере с помощью растрового графического редактора..."
+        android:maxLines="2"
+        android:ellipsize="end"/>
+
+    <LinearLayout
+        android:id="@+id/rate_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginHorizontal="16dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <ImageButton
+            android:id="@+id/like_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/heart"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:contentDescription="@string/like"/>
+
+        <TextView
+            android:id="@+id/like_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/main_text_color"
+            tools:text="128"
+            android:layout_marginStart="4dp"/>
+
+        <ImageButton
+            android:id="@+id/comment_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/chat"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:contentDescription="@string/comment"
+            android:layout_marginStart="16dp"/>
+
+        <TextView
+            android:id="@+id/comment_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/main_text_color"
+            tools:text="18"
+            android:layout_marginStart="4dp"/>
+
+    </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
