Homework 3 более менее рабочее состояние

--- a/homework3android/app/src/main/res/layout/item_art_post.xml
+++ b/homework3android/app/src/main/res/layout/item_art_post.xml
@@ -47,6 +47,7 @@
             android:layout_height="200dp"
             android:layout_below="@id/profile_image"
             android:layout_marginTop="8dp"
+            android:background="@color/nav_elem_tint"
             android:scaleType="fitXY"
             />
 
