--- a/homework3android/app/src/main/res/layout/activity_main.xml
+++ b/homework3android/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:background="@color/nav_comp_background"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
+        app:itemActiveIndicatorStyle="@color/button_dark_light_color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
