--- a/homework3android/app/src/main/res/layout/fragment_post.xml
+++ b/homework3android/app/src/main/res/layout/fragment_post.xml
@@ -3,13 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    >
+    android:fillViewport="true">
 
     <RelativeLayout
+        android:id="@+id/mainContent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/secondary_background"
         tools:context=".ui.post.PostFragment"
         >
@@ -71,6 +72,7 @@
             tools:src="@drawable/example_image"
             android:layout_below="@id/profile_image"
             android:layout_marginTop="8dp"
+            android:background="@color/nav_elem_tint"
             android:scaleType="centerCrop"
             />
 
@@ -122,12 +124,14 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/main_text_color"
                 tools:text="128"
+                android:textSize="24sp"
                 android:layout_marginStart="4dp"/>
 
             <ImageButton
                 android:id="@+id/comment_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:minHeight="24dp"
                 android:src="@drawable/chat"
                 android:background="?android:selectableItemBackgroundBorderless"
                 android:contentDescription="@string/comment"
@@ -138,10 +142,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/main_text_color"
-                tools:text="18"
+                tools:text="24"
+                android:textSize="24sp"
                 android:layout_marginStart="4dp"/>
 
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/postProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:progressBackgroundTint="@color/button_dark_light_color"
+            android:visibility="gone"/>
 
 
     </RelativeLayout>
